# multiproc

./: pyproject.toml
multiproc/: __init__.py  test.ipynb
