[tool.poetry]
name = "multiproc"
version = "0.1.0"
description = ""
authors = ["Dani <send2daninow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
joblib = "^1.4.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
